create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1878,6 +1878,108 @@ body {
   background-color: #ffffff;
   opacity: 0.4;
 }
+.cid-rv0nVPKyBL .form-control,
+.cid-rv0nVPKyBL .field-input {
+  padding: 0.5rem;
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv0nVPKyBL .form-control input::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .field-input input::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .form-control textarea::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .field-input textarea::-webkit-input-placeholder {
+  color: #57468b;
+}
+.cid-rv0nVPKyBL .form-control input:-moz-placeholder,
+.cid-rv0nVPKyBL .field-input input:-moz-placeholder,
+.cid-rv0nVPKyBL .form-control textarea:-moz-placeholder,
+.cid-rv0nVPKyBL .field-input textarea:-moz-placeholder {
+  color: #57468b;
+}
+.cid-rv0nVPKyBL .form-control:hover,
+.cid-rv0nVPKyBL .field-input:hover,
+.cid-rv0nVPKyBL .form-control:focus,
+.cid-rv0nVPKyBL .field-input:focus {
+  background-color: #ffe100;
+  border-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv0nVPKyBL .form-control:hover input::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .field-input:hover input::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .form-control:focus input::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .field-input:focus input::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .form-control:hover textarea::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .field-input:hover textarea::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .form-control:focus textarea::-webkit-input-placeholder,
+.cid-rv0nVPKyBL .field-input:focus textarea::-webkit-input-placeholder {
+  color: #ffffff;
+}
+.cid-rv0nVPKyBL .form-control:hover input:-moz-placeholder,
+.cid-rv0nVPKyBL .field-input:hover input:-moz-placeholder,
+.cid-rv0nVPKyBL .form-control:focus input:-moz-placeholder,
+.cid-rv0nVPKyBL .field-input:focus input:-moz-placeholder,
+.cid-rv0nVPKyBL .form-control:hover textarea:-moz-placeholder,
+.cid-rv0nVPKyBL .field-input:hover textarea:-moz-placeholder,
+.cid-rv0nVPKyBL .form-control:focus textarea:-moz-placeholder,
+.cid-rv0nVPKyBL .field-input:focus textarea:-moz-placeholder {
+  color: #ffffff;
+}
+.cid-rv0nVPKyBL .jq-number__spin:hover,
+.cid-rv0nVPKyBL .jq-number__spin:focus {
+  background-color: #ffe100;
+  border-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv0nVPKyBL .jq-number__spin {
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv0nVPKyBL .jq-selectbox li,
+.cid-rv0nVPKyBL .jq-selectbox li {
+  background-color: #ffffff;
+  color: #000000;
+}
+.cid-rv0nVPKyBL .jq-selectbox li:hover,
+.cid-rv0nVPKyBL .jq-selectbox li.selected {
+  background-color: #ffe100;
+  color: #000000;
+}
+.cid-rv0nVPKyBL .jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.cid-rv0nVPKyBL .jq-number__spin.minus:hover:after,
+.cid-rv0nVPKyBL .jq-number__spin.plus:hover:after {
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+.cid-rv0nVPKyBL .jq-selectbox .jq-selectbox__trigger-arrow,
+.cid-rv0nVPKyBL .jq-number__spin.minus:after,
+.cid-rv0nVPKyBL .jq-number__spin.plus:after {
+  border-top-color: #ffe100;
+  border-bottom-color: #ffe100;
+}
+.cid-rv0nVPKyBL input::-webkit-clear-button {
+  display: none;
+}
+.cid-rv0nVPKyBL input::-webkit-inner-spin-button {
+  display: none;
+}
+.cid-rv0nVPKyBL input::-webkit-outer-spin-button {
+  display: none;
+}
+.cid-rv0nVPKyBL input::-webkit-calendar-picker-indicator {
+  display: none;
+}
 .cid-rv0nVPKyBL H4 {
   color: #ffe100;
 }
@@ -1903,5 +2005,119 @@ body {
 }
 .cid-rv0GtgBVov .mbr-section-title {
   text-align: center;
+  color: #ffffff;
+}
+.cid-rv1f9HwIDQ {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/mbr-1920x1280.jpg");
+}
+.cid-rv1f9HwIDQ .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.3;
+}
+.cid-rv1f9HwIDQ .form-control,
+.cid-rv1f9HwIDQ .field-input {
+  padding: 0.5rem;
+  background-color: #ffffff;
+  border-color: #c0a375;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv1f9HwIDQ .form-control input::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .field-input input::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .form-control textarea::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .field-input textarea::-webkit-input-placeholder {
+  color: #000000;
+}
+.cid-rv1f9HwIDQ .form-control input:-moz-placeholder,
+.cid-rv1f9HwIDQ .field-input input:-moz-placeholder,
+.cid-rv1f9HwIDQ .form-control textarea:-moz-placeholder,
+.cid-rv1f9HwIDQ .field-input textarea:-moz-placeholder {
+  color: #000000;
+}
+.cid-rv1f9HwIDQ .form-control:hover,
+.cid-rv1f9HwIDQ .field-input:hover,
+.cid-rv1f9HwIDQ .form-control:focus,
+.cid-rv1f9HwIDQ .field-input:focus {
+  background-color: #f7da64;
+  border-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv1f9HwIDQ .form-control:hover input::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .field-input:hover input::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .form-control:focus input::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .field-input:focus input::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .form-control:hover textarea::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .field-input:hover textarea::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .form-control:focus textarea::-webkit-input-placeholder,
+.cid-rv1f9HwIDQ .field-input:focus textarea::-webkit-input-placeholder {
+  color: #ffffff;
+}
+.cid-rv1f9HwIDQ .form-control:hover input:-moz-placeholder,
+.cid-rv1f9HwIDQ .field-input:hover input:-moz-placeholder,
+.cid-rv1f9HwIDQ .form-control:focus input:-moz-placeholder,
+.cid-rv1f9HwIDQ .field-input:focus input:-moz-placeholder,
+.cid-rv1f9HwIDQ .form-control:hover textarea:-moz-placeholder,
+.cid-rv1f9HwIDQ .field-input:hover textarea:-moz-placeholder,
+.cid-rv1f9HwIDQ .form-control:focus textarea:-moz-placeholder,
+.cid-rv1f9HwIDQ .field-input:focus textarea:-moz-placeholder {
+  color: #ffffff;
+}
+.cid-rv1f9HwIDQ .jq-number__spin:hover,
+.cid-rv1f9HwIDQ .jq-number__spin:focus {
+  background-color: #f7da64;
+  border-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv1f9HwIDQ .jq-number__spin {
+  background-color: #ffffff;
+  border-color: #c0a375;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv1f9HwIDQ .jq-selectbox li,
+.cid-rv1f9HwIDQ .jq-selectbox li {
+  background-color: #ffffff;
+  color: #000000;
+}
+.cid-rv1f9HwIDQ .jq-selectbox li:hover,
+.cid-rv1f9HwIDQ .jq-selectbox li.selected {
+  background-color: #f7da64;
+  color: #000000;
+}
+.cid-rv1f9HwIDQ .jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.cid-rv1f9HwIDQ .jq-number__spin.minus:hover:after,
+.cid-rv1f9HwIDQ .jq-number__spin.plus:hover:after {
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+.cid-rv1f9HwIDQ .jq-selectbox .jq-selectbox__trigger-arrow,
+.cid-rv1f9HwIDQ .jq-number__spin.minus:after,
+.cid-rv1f9HwIDQ .jq-number__spin.plus:after {
+  border-top-color: #f7da64;
+  border-bottom-color: #f7da64;
+}
+.cid-rv1f9HwIDQ input::-webkit-clear-button {
+  display: none;
+}
+.cid-rv1f9HwIDQ input::-webkit-inner-spin-button {
+  display: none;
+}
+.cid-rv1f9HwIDQ input::-webkit-outer-spin-button {
+  display: none;
+}
+.cid-rv1f9HwIDQ input::-webkit-calendar-picker-indicator {
+  display: none;
+}
+.cid-rv1f9HwIDQ H4 {
   color: #ffffff;
 }
