--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1869,6 +1869,117 @@ body {
   padding-bottom: 30px;
   background-color: #57468b;
 }
+.cid-rv2hCfXVFf {
+  padding-top: 30px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-rv2hCfXVFf .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
+}
+.cid-rv2hCfXVFf .form-control,
+.cid-rv2hCfXVFf .field-input {
+  padding: 0.5rem;
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv2hCfXVFf .form-control input::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .field-input input::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .form-control textarea::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .field-input textarea::-webkit-input-placeholder {
+  color: #c1c1c1;
+}
+.cid-rv2hCfXVFf .form-control input:-moz-placeholder,
+.cid-rv2hCfXVFf .field-input input:-moz-placeholder,
+.cid-rv2hCfXVFf .form-control textarea:-moz-placeholder,
+.cid-rv2hCfXVFf .field-input textarea:-moz-placeholder {
+  color: #c1c1c1;
+}
+.cid-rv2hCfXVFf .form-control:hover,
+.cid-rv2hCfXVFf .field-input:hover,
+.cid-rv2hCfXVFf .form-control:focus,
+.cid-rv2hCfXVFf .field-input:focus {
+  background-color: #efefef;
+  border-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv2hCfXVFf .form-control:hover input::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .field-input:hover input::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .form-control:focus input::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .field-input:focus input::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .form-control:hover textarea::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .field-input:hover textarea::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .form-control:focus textarea::-webkit-input-placeholder,
+.cid-rv2hCfXVFf .field-input:focus textarea::-webkit-input-placeholder {
+  color: #000000;
+}
+.cid-rv2hCfXVFf .form-control:hover input:-moz-placeholder,
+.cid-rv2hCfXVFf .field-input:hover input:-moz-placeholder,
+.cid-rv2hCfXVFf .form-control:focus input:-moz-placeholder,
+.cid-rv2hCfXVFf .field-input:focus input:-moz-placeholder,
+.cid-rv2hCfXVFf .form-control:hover textarea:-moz-placeholder,
+.cid-rv2hCfXVFf .field-input:hover textarea:-moz-placeholder,
+.cid-rv2hCfXVFf .form-control:focus textarea:-moz-placeholder,
+.cid-rv2hCfXVFf .field-input:focus textarea:-moz-placeholder {
+  color: #000000;
+}
+.cid-rv2hCfXVFf .jq-number__spin:hover,
+.cid-rv2hCfXVFf .jq-number__spin:focus {
+  background-color: #efefef;
+  border-color: #000000;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv2hCfXVFf .jq-number__spin {
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-rv2hCfXVFf .jq-selectbox li,
+.cid-rv2hCfXVFf .jq-selectbox li {
+  background-color: #ffffff;
+  color: #000000;
+}
+.cid-rv2hCfXVFf .jq-selectbox li:hover,
+.cid-rv2hCfXVFf .jq-selectbox li.selected {
+  background-color: #efefef;
+  color: #000000;
+}
+.cid-rv2hCfXVFf .jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.cid-rv2hCfXVFf .jq-number__spin.minus:hover:after,
+.cid-rv2hCfXVFf .jq-number__spin.plus:hover:after {
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+.cid-rv2hCfXVFf .jq-selectbox .jq-selectbox__trigger-arrow,
+.cid-rv2hCfXVFf .jq-number__spin.minus:after,
+.cid-rv2hCfXVFf .jq-number__spin.plus:after {
+  border-top-color: #efefef;
+  border-bottom-color: #efefef;
+}
+.cid-rv2hCfXVFf input::-webkit-clear-button {
+  display: none;
+}
+.cid-rv2hCfXVFf input::-webkit-inner-spin-button {
+  display: none;
+}
+.cid-rv2hCfXVFf input::-webkit-outer-spin-button {
+  display: none;
+}
+.cid-rv2hCfXVFf input::-webkit-calendar-picker-indicator {
+  display: none;
+}
 .cid-rv0GtgBVov {
   padding-top: 0px;
   padding-bottom: 225px;
